feat: calculator app for testing and swagger integration
