# src/controllers/operation.controller.js
@@ -1,17 +1,12 @@
-const {
-    calculateOperation,
-    fetchOperationHistory,
-    deleteOperationById,
-    clearOperationHistory
-} = require('../services/operation.service.js');
+const { computeOperation, getOperationHistory, deleteOperationById, clearOperationHistory} = 
+require('../services/operation.service.js');
 
 const performOperation = async (req, res) => {
     const email = req.headers['email'];
     const payload = req.body;
-    // const { operand1, operand2, operator } = req.body;
 
     try {
-        const result = await calculateOperation(payload, email);
+        const result = await computeOperation(payload, email);
         res.status(201).json({ result });
     } catch (error) {
         res.status(400).json({ error: error.message });
@@ -22,7 +17,7 @@ const getHistory = async (req, res) => {
     const email = req.headers['email'];
 
     try {
-        const userHistory = await fetchOperationHistory(email);
+        const userHistory = await getOperationHistory(email);
         res.status(200).json(userHistory);
     } catch (error) {
         res.status(400).json({ error: error.message });
@@ -34,7 +29,7 @@ const clearHistory = async (req, res) => {
 
     try {
         await deleteOperationById(id);
-        res.status(200).send('History cleared');
+        res.status(200).send(`History cleared for ${id}`);
     } catch (error) {
         res.status(400).json({ error: error.message });
     }
@@ -45,7 +40,7 @@ const resetHistory = async (req, res) => {
 
     try {
         await clearOperationHistory(email);
-        res.status(200).send('History reset');
+        res.status(200).send('History clear completely');
     } catch (error) {
         res.status(400).json({ error: error.message });
     }
